# AI-Coach

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: README.md  __init__.py  analysis_view.py  components.py  issue_copy.py  streamlit_app.py  ui_panels.py  ui_score.py  ui_states.py  video_modal.py
backend/: README.md  __init__.py
backend/data/: __init__.py  frame_extractor.py  video_loader.py
backend/features/: __init__.py  angles.py  feature_pipeline.py  normalization.py  (+2 more)
configs/: default.yaml
docs/: ARCHITECTURE.md  COACHING.md  CONTINUOUS_SCORING.md  DATASETS.md  EXERCISES.md  GITHUB_SETUP.md  MODELS.md  PHASES.md
frontend/: README.md  __init__.py  analysis_view.py  components.py  gym_theme.py  streamlit_app.py  ui_panels.py  ui_score.py  ui_states.py  video_modal.py
models/: README.md
scripts/: README.md  analyze_form.py  bootstrap_labels.py  compare_predictions.py  compute_features.py  demo_model_eval.py  ensure_model.py  extract_frames.py  extract_pose.py  fetch_web_dataset.py  generate_coaching.py  make_demo_preview.py  predict_rep_quality.py  reprocess_all.py  run_app.py  segment_reps.py  smoke_test_app.py  train_classifier.py  visualize_evaluation.py
src/: README.md  __init__.py
tests/: __init__.py  conftest.py  test_analysis_view.py  test_baseline_model.py  test_coaching.py  test_features.py  test_form_rules.py  test_model_loader.py  test_package.py  test_pose.py  test_pose_schema.py  test_project_layout.py  test_reps.py  test_scoring.py  test_video.py  test_video_config.py  test_video_modal.py
(+79 files in other folders)
